--- a/Front/sistema-hacienda/src/app/index/main/main.component.html
+++ b/Front/sistema-hacienda/src/app/index/main/main.component.html
@@ -1,7 +1,7 @@
-<app-nav [menuItems]="menuItems"
+<app-nav 
+         [menuItems]="menuItems"
          [userRole]="userRole"
-         [userGroup]="userGroup ">
-</app-nav>
+         [userGroup]="userGroup "></app-nav>
 
 
 <!-- *************
